--- a/Cargo-Receiver/package.json
+++ b/Cargo-Receiver/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "rest-express",
+  "name": "paperless",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
-  "scripts": {
+  "scripts":
+  "homepage": "https://yuri106.github.io/paperless/",
+  {
     "dev:client": "vite dev --port 5000",
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
     "db:push": "drizzle-kit push"
+    "predeploy": "vite build --mode github",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
